# Old-hooky

./: Makefile  README.md  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac
autom4te.cache/: output.0  output.1  output.2  traces.0  traces.1  traces.2
src/: Makefile  Makefile.am  Makefile.in  callback.c  callback.h  client.c  client.h  hooky.c  hooky.h
src/.deps/: callback.Po  client.Po  hooky.Po
test/: chaos_client.rb  echo_client.rb  json_client.rb
test/ipsum/: four.txt  one.txt  three.txt  two.txt
